@@ -21,8 +21,9 @@ import nbbrd.design.DirectImpl;
 import nbbrd.design.VisibleForTesting;
 import nbbrd.io.FileParser;
 import nbbrd.io.function.IOFunction;
-import nbbrd.io.http.URLQueryBuilder;
+import nbbrd.io.http.UriQueryBuilder;
 import nbbrd.io.net.MediaType;
+import nbbrd.io.text.BaseProperty;
 import nbbrd.io.text.BooleanProperty;
 import nbbrd.io.text.Parser;
 import nbbrd.service.ServiceProvider;
@@ -35,27 +36,30 @@ import sdmxdl.format.time.StandardReportingFormat;
 import sdmxdl.format.time.TimeFormats;
 import sdmxdl.format.xml.XmlMediaTypes;
 import sdmxdl.provider.HasMarker;
+import sdmxdl.provider.PropertiesSupport;
 import sdmxdl.provider.SdmxFix;
 import sdmxdl.provider.ri.drivers.RiRestClient;
 import sdmxdl.provider.ri.drivers.Sdmx21RestErrors;
 import sdmxdl.provider.ri.drivers.Sdmx21RestParsers;
 import sdmxdl.provider.ri.drivers.Sdmx21RestQueries;
+import sdmxdl.provider.ri.http.HttpFactory;
+import sdmxdl.provider.ri.http.HttpManager;
 import sdmxdl.provider.web.DriverSupport;
-import sdmxdl.provider.web.RestConnector;
+import sdmxdl.provider.web.RestClient;
+import sdmxdl.provider.web.RestClientFactory;
 import sdmxdl.web.WebSource;
 import sdmxdl.web.spi.Driver;
 import sdmxdl.web.spi.WebContext;
 
 import java.io.IOException;
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.EnumSet;
+import java.util.List;
 import java.util.function.Supplier;
 
 import static sdmxdl.Confidentiality.PUBLIC;
 import static sdmxdl.format.time.TimeFormats.IGNORE_ERROR;
 import static sdmxdl.provider.SdmxFix.Category.*;
-import static sdmxdl.provider.ri.drivers.RiHttpUtils.DEFAULT_HTTP_FACTORY;
 
 /**
  * @author Philippe Charles
@@ -71,9 +75,7 @@ public final class InseeDialectDriver implements Driver {
             .builder()
             .id(DIALECTS_INSEE)
             .rank(NATIVE_DRIVER_RANK)
-            .connector(RestConnector.of(InseeRestClient::new))
-            .propertiesOf(DEFAULT_HTTP_FACTORY.getFactoryProperties())
-            .propertyOf(NO_COMMA_ENCODING_PROPERTY)
+            .connectorOf(new InseeRestClientFactory())
             .source(WebSource
                     .builder()
                     .id("INSEE")
@@ -110,18 +112,36 @@ public final class InseeDialectDriver implements Driver {
 
     @SdmxFix(id = 6, category = QUERY, cause = "Since October 2025, encoded comma in URL triggers HTTP 500 error")
     @PropertyDefinition
-    private static final BooleanProperty NO_COMMA_ENCODING_PROPERTY =
+    public static final BooleanProperty NO_COMMA_ENCODING_PROPERTY =
             BooleanProperty.of(DRIVER_PROPERTY_PREFIX + ".noCommaEncoding", false);
+
+    private static final class InseeRestClientFactory implements RestClientFactory {
+
+        private final HttpFactory httpFactory = HttpManager.getHttpFactory();
+
+        @Override
+        public @NonNull List<BaseProperty> getRestClientProperties() {
+            return PropertiesSupport.merge(
+                    httpFactory.getHttpClientProperties(),
+                    NO_COMMA_ENCODING_PROPERTY
+            );
+        }
+
+        @Override
+        public @NonNull RestClient createRestClient(@NonNull WebSource source, @NonNull Languages languages, @NonNull WebContext context) {
+            return new InseeRestClient(source, languages, context, httpFactory);
+        }
+    }
 
     private final static class InseeRestClient extends RiRestClient {
 
-        InseeRestClient(WebSource s, Languages languages, WebContext c) {
+        InseeRestClient(WebSource s, Languages languages, WebContext c, HttpFactory httpFactory) {
             super(
                     HasMarker.of(s),
                     s.getEndpoint(),
                     languages,
                     OBS_FACTORY,
-                    DEFAULT_HTTP_FACTORY.create(s, c),
+                    httpFactory.createHttpClient(s, c),
                     NO_COMMA_ENCODING_PROPERTY.get(s.getProperties())
                             ? InseeRestQueries.NO_COMMA_ENCODING
                             : InseeRestQueries.DEFAULT,
@@ -155,13 +175,13 @@ public final class InseeDialectDriver implements Driver {
         }
 
         @Override
-        protected URLQueryBuilder onData(URL endpoint, String resourcePath, FlowRef flowRef, Key key, String providerRef) {
-            URLQueryBuilder result = super.onData(endpoint, resourcePath, flowRef, key, providerRef);
+        protected UriQueryBuilder onData(URI endpoint, String resourcePath, FlowRef flowRef, Key key, String providerRef) {
+            UriQueryBuilder result = super.onData(endpoint, resourcePath, flowRef, key, providerRef);
             if (noCommaEncoding) {
                 String fixedURL = result.toString().replace("%2C", ",");
                 try {
-                    return URLQueryBuilder.of(new URL(fixedURL));
-                } catch (MalformedURLException e) {
+                    return UriQueryBuilder.of(URI.create(fixedURL));
+                } catch (IllegalArgumentException e) {
                     return result;
                 }
             }
