@@ -4,6 +4,7 @@ import nbbrd.io.picocsv.Picocsv;
 import nbbrd.picocsv.Csv;
 
 import java.io.IOException;
+import java.net.URI;
 import java.net.URL;
 import java.util.HashMap;
 import java.util.Map;
@@ -14,7 +15,7 @@ final class Websites {
         throw new UnsupportedOperationException("This is a utility class and cannot be instantiated");
     }
 
-    public static final Picocsv.Parser<Map<String, URL>> PARSER =
+    public static final Picocsv.Parser<Map<String, Website>> PARSER =
             Picocsv.Parser
                     .builder(Websites::parseCsv)
                     .options(Csv.ReaderOptions.DEFAULT
@@ -23,16 +24,31 @@ final class Websites {
                             .build())
                     .build();
 
-    private static Map<String, URL> parseCsv(Csv.Reader reader) throws IOException {
-        Map<String, URL> result = new HashMap<>();
+    @lombok.Value
+    static class Website {
+        URL url;
+        String listing;
+        boolean cookie;
+    }
+
+    private static Map<String, Website> parseCsv(Csv.Reader reader) throws IOException {
+        Map<String, Website> result = new HashMap<>();
         while (reader.readLine()) {
             if (!reader.isComment()) {
                 if (!reader.readField()) throw new IOException("Invalid format, expecting host");
                 String host = reader.toString();
                 if (!reader.readField()) throw new IOException("Invalid format, expecting URL");
-                URL url = reader.length() > 0 ? new URL(reader.toString()) : null;
-                if (reader.readField()) throw new IOException("Invalid format, unexpected field");
-                result.put(host, url);
+                URL url = reader.length() > 0 ? URI.create(reader.toString()).toURL() : null;
+                String listing = null;
+                boolean cookie = false;
+                if (reader.readField()) {
+                    listing = reader.length() > 0 ? reader.toString() : null;
+                    if (reader.readField()) {
+                        cookie = reader.length() > 0 && Boolean.parseBoolean(reader.toString());
+                        if (reader.readField()) throw new IOException("Invalid format, unexpected field");
+                    }
+                }
+                result.put(host, new Website(url, listing, cookie));
             }
         }
         return result;
